# templates

./: .editorconfig  .markdownlint.json  README.md  templates.code-workspace
templates/python/general_purpose_project/: .gitignore  Makefile.toml  README.md  pyproject.toml
templates/python/general_purpose_project/general_purpose_project/: __init__.py  __main__.py  config.py  errors.py  meta.py
templates/python/general_purpose_project/general_purpose_project/cli/: __init__.py  context.py  main.py
templates/python/python_template_001/: .editorconfig  Makefile.toml  README.md
templates/python/python_template_001/scripts/: sync_package_meta.sh
templates/python/python_template_001/template_001/: __init__.py
templates/python/template_001/: .editorconfig  Makefile.toml  README.md  TODO.md  pyproject.toml
templates/python/template_001/template_001/: __init__.py  meta.py
templates/python/template_001/template_001/utils/: json.py  logging.py
templates/rust/general_purpose_project/: .gitignore  Cargo.toml  Makefile.toml  README.md
templates/rust/general_purpose_project/bins/general_purpose_project_bin/: Cargo.toml
templates/rust/general_purpose_project/bins/general_purpose_project_bin/src/: main.rs
templates/rust/general_purpose_project/bins/general_purpose_project_bin/src/cmdline/: cmdline.rs  hello_world.rs  mod.rs
templates/rust/general_purpose_project/libs/general_purpose_project_lib/: Cargo.toml
templates/rust/general_purpose_project/scripts/: calc_project_loc.sh
templates/rust/rust_template_001/: .markdownlint.json  Cargo.toml  Makefille.toml  README.md
templates/shared/: .editorconfig  .markdownlint.json
templates/shared/scripts/: calc_project_loc.sh
templates/typescript/frontend_vanilla_project/: .eslintrc.cjs  .gitignore  Makefile.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
templates/typescript/frontend_vanilla_project/public/: index.css  manifest.json
templates/typescript/frontend_vanilla_project/src/: main.module.scss  main.ts
(+16 files in other folders)
