[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]


[tool.poetry]
name = "template-001"
description = "Python project template 001"
license = "Unlicense"
version = "0.1.0"
authors = ["ddnomad <self@ddnomad.net>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"

aiohttp = "^3.9.1"
attrs = "*"
beartype = "*"
cattrs = "^23.2.3"
click = "*"
python-dotenv = "^1.0.0"
structlog = "*"


[tool.poetry.group.dev.dependencies]
ruff = "*"


[tool.ruff]
line-length = 120


[tool.ruff.format]
indent-style = "space"
quote-style = "single"


[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "C90",   # mccabe
  "COM",   # flake8-commans
  "D",     # pydocstyle
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle
  "F",     # pyflakes
  "FURB",  # refurb
  "FIX",   # flake8-fixme
  "I",     # isort
  "INT",   # flake8-gettext
  "N",     # pep8-naming
  "PERF",  # Perflint
  "PL",    # pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-use-pathlib
  "Q",     # flake8-quotes
  "RET",   # flake8-return
  "RSE",   # flake8-raise
  "RUF",   # Ruff-specific rules
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "TD",    # flake8-todos
  "TID",   # flake8-tidy-imports
  "W",     # pycodestyle warnings
]
ignore = ["PLW2901", "TD003"]


[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
